--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=email-expense-scanner
+logging.file.name=C:/logs/email-expense-scanner.log
+logging.level.root=INFO
+logging.level.com.example.email_expense_scanner=DEBUG
