--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-spring.application.name=email-expense-scanner
-logging.file.name=C:/logs/email-expense-scanner.log
+logging.file.path=C:/logs
+logging.file.name=email-expense-scanner.log
+logging.file.clean-history-on-start=true
 logging.level.root=INFO
 logging.level.com.example.email_expense_scanner=DEBUG
