optimized how we process email and added logging configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,1 @@
-logging.file.path=C:/logs
-logging.file.name=email-expense-scanner.log
-logging.level.root=INFO
-logging.level.com.example.email_expense_scanner=DEBUG
+spring.application.name=email-expense-scanner
