--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,13 @@
             <artifactId>jollyday</artifactId>
             <version>0.4.9</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.opencsv</groupId>
+            <artifactId>opencsv</artifactId>
+            <version>5.7.1</version>
+        </dependency>
+
     </dependencies>
 
 
